Fix sections layout bug

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -180,6 +180,10 @@ section.content {
 		float: right;
 	}
 
+	div.posts {
+		display: inline-block;
+	}
+
 	display: inline-block;
 	border-bottom: 1px solid $dark-grey;
 }
